--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
+logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl=error
+spring.jpa.database=SQL_SERVER
+spring.datasource.url=jdbc:sqlserver://MNEPRTSQL40;databaseName=NdxData
+spring.datasource.username=nmaloney02admin
+spring.datasource.password=PleaseMore24
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
