As of 4pm thursday 5/20/2021.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
 logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl=error
 spring.jpa.database=SQL_SERVER
+#Below is the database url connection string
+#Note for Nathan : Change MNEPRTSQL40 to MNEPRPSQL AND CHANGE databaseName to whatever database you end up using in production. this must house the tables we are creating for CAVE
 spring.datasource.url=jdbc:sqlserver://MNEPRTSQL40;databaseName=NdxData;
+#uSERNAME AND PASSWORD FOR THE WEBAPP  DB access
 spring.datasource.username=svcpNDXValidate
 spring.datasource.password=leCoOPO5aL1Y
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
