--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ndx</groupId>
-    <artifactId>ndxvalidate</artifactId>
+    <artifactId>CAVE</artifactId>
     <version>1.0.0</version>
-    <name>ndxvalidate</name>
-    <description>Ndx Validate</description>
+    <name>CAVE</name>
+    <description>CAVE</description>
     <properties>
         <java.version>11</java.version>
     </properties>
@@ -74,6 +74,12 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+            <version>0.0.20131108.vaadin1</version>
+            <scope>compile</scope>
         </dependency>
 
 
